force-app/main/default/objects/ProductConsumed/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate Price</fullName>
            </value>
            <value>
                <fullName>Parts Discount - Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>Multiple Parts - Discount Adjustment</fullName>
            </value>
            <value>
                <fullName>Field Manager Approved - Parts Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>